--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simpeg-graphql-v3",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "@apollo/server": "^4.11.2",
     "@graphql-tools/schema": "^10.0.13",
     "@prisma/client": "6.1.0",
-    "axios": "^1.7.9",
+    "axios": "1.8.2",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
     "graphql-tag": "^2.12.6"
